add api-gateway and fix user-service